# ComfyUI_Dia

./: README-CN.md  README.md  __init__.py  dianode.py  pyproject.toml  requirements.txt
dia/: __init__.py  audio.py  config.py  layers.py  model.py  state.py
workflow-examples/: Dia-Clone-speaker.json  Dia-Clone.json  Dia-Gen.json  Gemini-to-Dia.json
